# 6G-Testbed

./: .gitignore  ATTRIBUTION_NOTICE  README.md  README_new.md
aiortc-main-clean/: README.rst
aitestbed/: .dockerignore  .env.example  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  LICENSE  METRICS.md  Makefile  README.md  TRACES.md  VLLM.md  __init__.py  anonymize_db.py  docker-compose.yml  export_to_excel.py  generate_charts.py  generate_results_md.py  generate_traces_md.py  orchestrator.py  requirements.txt  run_chat_test.sh  run_full_tests.sh  run_vlm_test.sh  setup.py  test_profiles.sh  test_vllm.sh
aitestbed/analysis/: __init__.py  anonymization.py  logger.py  metrics.py  pcap_analyzer.py  ran2_metrics.py  trace_logger.py  visualize.py
aitestbed/capture/: __init__.py  controller.py  l7_capture.py
aitestbed/clients/: __init__.py  azure_inference_client.py  azure_openai_client.py  base.py  deepseek_client.py  gemini_client.py  mcp_client.py  openai_client.py  openai_token_client.py  realtime_client.py  realtime_webrtc_client.py  realtime_webrtc_vlm_client.py  vllm_client.py
aitestbed/configs/: anonymization_map.json  mcp_servers.yaml  profiles.yaml  scenarios.yaml
aitestbed/docker/: entrypoint.sh  init-db.sql  prometheus.yml  run.sh
aitestbed/examples/: l7_capture_example.py
aitestbed/mcp_servers/: __init__.py  __main__.py  http_bridge.py  playwright_server.py  spotify_server.py
aitestbed/scenarios/: __init__.py  agent.py  base.py  chat.py  chat_token.py  computer_use.py  direct_search.py  image.py  multimodal.py  music_agent.py  playwright_agent.py  realtime.py  (+3 more)
netemu/: README.md  pyproject.toml
netemu/examples/: profiles.yaml
netemu/scripts/: apply_profile.sh  clear_profile.sh
netemu/src/netemu/: __init__.py  emulator.py  exceptions.py  profile.py
netemu/tests/: conftest.py  test_emulator.py  test_profile.py
(+15 files in other folders)
