[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netemu"
version = "0.1.0"
description = "Linux tc/netem network emulation wrapper for Python"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "6G AI Testbed Team" }
]
keywords = [
    "network",
    "emulation",
    "tc",
    "netem",
    "traffic-shaping",
    "latency",
    "bandwidth",
    "packet-loss",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/3gpp/netemu"
Documentation = "https://github.com/3gpp/netemu#readme"
Repository = "https://github.com/3gpp/netemu"

[tool.hatch.build.targets.wheel]
packages = ["src/netemu"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/examples",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
